added courses v2
